Fix comments wrapping around short piece on article page.

--- a/css/blocks/leader.css
+++ b/css/blocks/leader.css
@@ -11,3 +11,4 @@
 .leader hr:after { content:"--"; }
 .leader .dateline { font-size:.85em; text-transform:uppercase; }
 .leader .dateline:after { content:" -- "; }
+.leader.continued { min-height:50em; }
